--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'G-QB31DRZKQZ');
-    </script> -->
-
     <!-- Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-XFQHT4TXGG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-XFQHT4TXGG');
-</script> -->
-
-    <!-- clothes -->
-    <!-- Google tag (gtag.js) -->
-    <!-- <script
+    <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-BW7M637CZP"
+      src="https://www.googletagmanager.com/gtag/js?id=G-GB4JBF54V2"
     ></script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -34,42 +14,10 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-BW7M637CZP');
-    </script> -->
-
-    <!-- Google Tag Manager -->
-    <!-- <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-K4FB5ST');
-    </script> -->
-    <!-- End Google Tag Manager -->
-
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XFQHT4TXGG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config',  'G-XFQHT4TXGG');
-</script>
-
+      gtag('config', 'G-XFQHT4TXGG');
+    </script>
 
     <script>
-      // componentDidMount(){
-      // gtag('event', 'page_view', { send_to: 'GTM-K4FB5ST' });
-
-      //
-      // }
       console.log('google analytics train new tag ..........');
     </script>
 
@@ -88,8 +36,12 @@
     <title>React App</title>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript>
+    <div id="root"></div>
+  </body>
+</html>
+
+<!-- Google Tag Manager (noscript) -->
+<!-- <noscript>
       <iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-K4FB5ST"
         height="0"
@@ -97,7 +49,55 @@
         style="display: none; visibility: hidden"
       ></iframe>
     </noscript> -->
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="root"></div>
-  </body>
-</html>
+<!-- End Google Tag Manager (noscript) -->
+
+<!-- <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-QB31DRZKQZ');
+    </script> -->
+
+<!-- Google tag (gtag.js) -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-XFQHT4TXGG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XFQHT4TXGG');
+</script> -->
+
+<!-- clothes -->
+<!-- Google tag (gtag.js) -->
+<!-- <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-BW7M637CZP"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-BW7M637CZP');
+    </script> -->
+
+<!-- Google Tag Manager -->
+<!-- <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-K4FB5ST');
+    </script> -->
+<!-- End Google Tag Manager -->
