--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-XFQHT4TXGG');
+      gtag('config', 'G-GB4JBF54V2');
     </script>
 
     <script>
