--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js??debug=true₪id=G-GB4JBF54V2"
+      src="https://www.googletagmanager.com/gtag/js?debug=true₪id=G-GB4JBF54V2"
     ></script>
 
     <script>
