--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?debug=true₪id=G-GB4JBF54V2"
+      src="https://www.googletagmanager.com/gtag/js?debug=true&id=G-BH3L7FTCWX"
     ></script>
+    <!-- <script async src="https://www.google-analytics.com/analytics_debug.js"></script> -->
 
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -14,7 +15,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-GB4JBF54V2');
+      gtag('config', 'G-BH3L7FTCWX', { debug_mode: true });
     </script>
 
     <script>
