--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       gtag('js', new Date());
 
       gtag('config', 'G-BH3L7FTCWX', { debug_mode: true });
+      console.log('***** init ga gtag:', 'G-BH3L7FTCWX');
     </script>
 
     <script>
