--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,8 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?debug=true&id=G-BH3L7FTCWX"
+      src="https://www.googletagmanager.com/gtag/js?id=G-BH3L7FTCWX"
     ></script>
-    <!-- <script async src="https://www.google-analytics.com/analytics_debug.js"></script> -->
-
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -15,8 +13,8 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-BH3L7FTCWX', { debug_mode: true });
-      console.log('***** init ga gtag:', 'G-BH3L7FTCWX');
+      gtag('config', 'G-BH3L7FTCWX');
+      console.log('*** init ga tag', 'G-BH3L7FTCWX');
     </script>
 
     <script>
@@ -41,65 +39,3 @@
     <div id="root"></div>
   </body>
 </html>
-
-<!-- Google Tag Manager (noscript) -->
-<!-- <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-K4FB5ST"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe>
-    </noscript> -->
-<!-- End Google Tag Manager (noscript) -->
-
-<!-- <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'G-QB31DRZKQZ');
-    </script> -->
-
-<!-- Google tag (gtag.js) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-XFQHT4TXGG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-XFQHT4TXGG');
-</script> -->
-
-<!-- clothes -->
-<!-- Google tag (gtag.js) -->
-<!-- <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-BW7M637CZP"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'G-BW7M637CZP');
-    </script> -->
-
-<!-- Google Tag Manager -->
-<!-- <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-K4FB5ST');
-    </script> -->
-<!-- End Google Tag Manager -->
