--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-BH3L7FTCWX"
+      src="https://www.googletagmanager.com/gtag/js?id=G-GVNHZ8W57J"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,8 +13,8 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-BH3L7FTCWX');
-      console.log('*** init ga tag', 'G-BH3L7FTCWX');
+      gtag('config', 'G-GVNHZ8W57J');
+      console.log('*** init ga tag', 'G-GVNHZ8W57J');
     </script>
 
     <script>
