--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-GVNHZ8W57J"
+      src="https://www.googletagmanager.com/gtag/js?id=G-ZW0J2WTERK"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,8 +13,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-GVNHZ8W57J');
-      console.log('*** init ga tag', 'G-GVNHZ8W57J');
+      gtag('config', 'G-ZW0J2WTERK');
     </script>
 
     <script>
